grammar.js
    source_file: $ => seq(
      repeat($.terminated_statement),
      optional($._terminated_list),
    ),

    _statement: $ => choice(
      $.terminated_statement,
      $.list,
    ),

    terminated_statement: $ => choice(
      prec(2, seq(
        alias($._heredoc_list, $.list),
        $._terminator,
        $.heredoc_body,
      )),
      prec(1, seq(
        optional($._terminated_list),
        choice($._terminator, $.comment),
      )),
    ),

    _terminated_list: $ => prec(1, seq(
      $.list,
      optional($._job_terminator),
    )),

    list: $ => prec.left(PREC.list, seq(
      $.pipeline,
      repeat(seq($.list_operator, $.pipeline)),
    )),

    pipeline: $ => prec.left(PREC.pipeline, seq(
      optional($.bang),
      $._command,
      repeat(seq('|', optional('&'), repeat($._terminator), $._command)),
    )),

    _command: $ => choice(
      $.timed_command,
      $.if_statement,
      $.conditional_command,
      $.test_command,
      $.for_statement,
      $.while_statement,
      $.until_statement,
      $.case_statement,
      $.always_statement,
      $.select_statement,
      $.repeat_statement,
      $.foreach_statement,
      $.function_definition,
      $.arithmetic_command,
      $._redirected_command,
      $.subshell,
      $.block,
      $.coproc_statement,
      $.simple_command,
    ),

    timed_command: $ => prec.right(PREC.command + 2, seq(
      'time',
      optional($._command),
    )),

    simple_command: $ => prec.right(PREC.command, choice(
      seq(
        repeat(choice($.assignment, $.redirect)),
        repeat($.precommand),
        $.command_name,
        repeat(choice($.assignment, $._command_part, $.redirect)),
      ),
      seq(
        repeat1(choice($.assignment, $.redirect, $.precommand)),
      ),
    )),

    _heredoc_list: $ => prec.left(PREC.list, seq(
      alias($._heredoc_pipeline, $.pipeline),
      repeat(seq($.list_operator, $.pipeline)),
    )),

    command_name: $ => $._word,

    _command_part: $ => choice(
      $._word,
      alias($._command_assignment_word, $.word),
    ),

    assignment: $ => prec.right(PREC.command + 1, seq(
      field('name', alias($._assignment_name, $.variable_name)),
      optional(choice($.array_assignment, alias($._assignment_brace_value, $.word), alias(token.immediate(/[0-9]+/), $.word), $._word)),
    )),

    _assignment_brace_value: _ => token.immediate(prec(2, /\$\{[^}\n]+\}[^\s'"`$\\;|&<>(){}=>]*\$\{[^}\n]+\}\}?/)),

    _assignment_name: _ => token(prec(2, seq(
      PARAMETER_NAME,
      optional(seq('[', /[^\]\n]+/, ']')),
      choice('+=', ':=', '='),
    ))),

    redirect: $ => prec.right(choice(
      $._herestring_redirect,
      $._heredoc_redirect,
      seq(
        optional(choice(/[0-9]+/, $.brace_descriptor)),
        $.redirect_operator,
        optional(choice(alias(token.immediate(/[0-9]+/), $.word), $._word)),
      ),
    )),

    redirect_operator: _ => token(prec(2, choice(
      ...REDIRECT_OPERATORS.map(operator => seq(/[0-9]+/, operator)),
      ...REDIRECT_OPERATORS,
    ))),

    _herestring_redirect: $ => seq(
      optional(choice(/[0-9]+/, $.brace_descriptor)),
      alias($.herestring_operator, $.redirect_operator),
      choice(alias(token.immediate(/[0-9]+/), $.word), $._word),
    ),

    _heredoc_redirect: $ => choice(
      seq(
        optional(choice(/[0-9]+/, $.brace_descriptor)),
        alias($.heredoc_operator, $.redirect_operator),
        $.heredoc_start,
      ),
      seq(
        optional(choice(/[0-9]+/, $.brace_descriptor)),
        alias($._heredoc_strip_operator, $.redirect_operator),
        alias($._heredoc_strip_start, $.heredoc_start),
      ),
    ),

    heredoc_body: $ => seq(
      repeat($.heredoc_content),
      $.heredoc_end,
    ),

    precommand: _ => choice(
      'nocorrect',
      'noglob',
      'coproc',
      'command',
      'exec',
      'builtin',
    ),

    if_statement: $ => choice(
      seq(
        'if',
        $._statement_body,
        'then',
        repeat($._statement),
        repeat($.elif_clause),
        optional($.else_clause),
        'fi',
      ),
      prec.right(1, seq(
        'if',
        $.list,
        $.block,
        repeat($.short_elif_clause),
        optional($.short_else_clause),
      )),
    ),

    block: $ => seq(
      '{',
      repeat($._statement),
      '}',
    ),

    command_substitution: $ => choice(
      prec(4, seq('$(', repeat($.list), alias($._heredoc_redirect, $.redirect), $._terminator, $.heredoc_body, ')')),
      prec(3, seq('$(', alias($._heredoc_list, $.list), $._terminator, $.heredoc_body, ')')),
      seq('$(', repeat($._statement), ')'),
      prec(1, seq('${|', repeat($.list), '}')),
      prec(1, seq('${{', field('parameter', $.variable_name), '}', repeat($.list), '}')),
      prec(1, seq('${', token.immediate(/[ \t]+/), repeat($.list), '}')),
      seq('`', repeat(choice(token.immediate(/[^`\\]+/), $.escape_sequence)), '`'),
    ),

    process_substitution: $ => seq(
      $._process_substitution_operator,
      repeat($._statement),
      ')',
    ),

    _process_substitution_operator: _ => token(prec(3, choice('<(', '>(', '=('))),

    test_command: $ => seq(
      '[',
      optional($.conditional_expression),
      ']',
    ),

    conditional_expression: $ => prec.left(seq(
      $._conditional_term,
      repeat(seq($.conditional_operator, $._conditional_term)),
    )),

    _conditional_term: $ => choice(
      $.conditional_group,
      $.test_negated_expression,
      $.test_unary_expression,
      $.test_binary_expression,
      $._conditional_operand,
    ),

    test_unary_expression: $ => seq(
      $.test_operator,
      $._conditional_operand,
    ),

    test_operator: _ => token(prec(3, choice(
      '==',
      '!=',
      '=~',
      '<=',
      '>=',
      '-eq',
      '-ef',
      '-ne',
      '-lt',
      '-le',
      '-gt',
      '-ge',
      '-a',
      '-b',
      '-c',
      '-d',
      '-e',
      '-f',
      '-g',
      '-h',
      '-k',
      '-n',
      '-nt',
      '-o',
      '-ot',
      '-p',
      '-r',
      '-s',
      '-t',
      '-u',
      '-v',
      '-w',
      '-x',
      '-z',
      '-L',
      '-O',
      '-G',
      '-S',
      '=',
      '<',
      '>',
    ))),

    _conditional_operand: $ => choice(
      alias($._dollar_terminated_double_quoted_string, $.double_quoted_string),
      alias($.conditional_quoted_word, $.word),
      alias($.conditional_single_quoted_word, $.word),
      $.double_quoted_string,
      $.single_quoted_string,
      $.ansi_c_string,
      $.compound_word,
      alias(token(prec(4, '<->')), $.word),
      $.parameter_expansion,
      $.variable_expansion,
      $.command_substitution,
      $.arithmetic_expansion,
      alias($._conditional_subscript_word, $.word),
      alias($._conditional_glob_flag_word, $.word),
      alias($._conditional_extglob_word, $.word),
      alias($.conditional_word, $.word),
      $.glob_pattern,
    ),

    parameter_expansion: $ => choice(
      prec(2, seq(
        '${',
        $.parameter_flags,
        choice(
          $._parameter_shorthand_flag_operation,
          $._parameter_presence_operation,
          $._parameter_operation,
          $._parameter_default,
          $._parameter_body,
        ),
        '}',
      )),
      seq(
        '${',
        choice(
          $._parameter_shorthand_flag_operation,
          $._parameter_presence_operation,
          $._parameter_operation,
          $._parameter_body,
        ),
        '}',
      ),
    ),

    _parameter_body: $ => seq(
      repeat1(choice(
        $.variable_name,
        $.special_parameter,
        $.command_substitution,
      )),
      repeat($.parameter_subscript),
    ),

    _parameter_operation: $ => choice(
      seq(
        field('parameter', choice($.variable_name, $.special_parameter, $.parameter_expansion, $.command_substitution)),
        repeat($.parameter_subscript),
        repeat1(choice(
          $._parameter_default,
          $._parameter_removal,
          $.parameter_substitution,
          $.parameter_slice,
        )),
      ),
      seq(
        field('parameter', $.parameter_expansion),
        repeat1($.parameter_subscript),
      ),
    ),

    _parameter_presence_operation: $ => seq(
      alias($._parameter_presence_operator, $.parameter_operator),
      $._parameter_body,
    ),

    _parameter_shorthand_flag_operation: $ => seq(
      alias($._parameter_shorthand_flag_operator, $.parameter_operator),
      $._parameter_body,
    ),

    _parameter_default: $ => seq(
      $.parameter_operator,
      repeat($._parameter_part),
    ),

    parameter_operator: _ => token.immediate(choice('::=', ':^^', ':-', ':=', ':?', ':+', ':#', ':|', ':*', ':^', '-', '=', '?', '+')),

    variable_expansion: $ => seq(
      '$',
      choice(
        alias($._identifier, $.variable_name),
        /[0-9#?@$!*_-]/,
      ),
    ),

    double_quoted_string: $ => seq(
      '"',
      repeat(choice(
        token.immediate(/[^"\\$`]+/),
        $.escape_sequence,
        $.variable_expansion,
        $.parameter_expansion,
        $.arithmetic_expansion,
        $.command_substitution,
        token.immediate('$'),
      )),
      '"',
    ),

    single_quoted_string: _ => seq(
      "'",
      repeat(token.immediate(/[^']+/)),
      "'",
    ),

    word: _ => /[^\s'"`$\\;|&<>(){}=>\x5b\x5d]+/,

    option_word: _ => token(prec(1, /--?[A-Za-z0-9][A-Za-z0-9._+/@%-]*[=:][A-Za-z0-9._+/@:%=-]*/)),

    special_parameter: _ => token.immediate(/[0-9#?@$!*_-]/),

    brace_descriptor: _ => token(prec(2, seq('{', /[A-Za-z_][A-Za-z0-9_]*/, '}'))),

    _word: $ => choice(
      $.glob_pattern,
      $.option_word,
      alias($._brace_word, $.word),
      alias(token(prec(1, /[0-9]+/)), $.word),
      $.escape_sequence,
      $.word,
      $.double_quoted_string,
      $.single_quoted_string,
      $.ansi_c_string,
      $.variable_expansion,
      $.parameter_expansion,
      $.arithmetic_expansion,
      $.command_substitution,
      $.process_substitution,
    ),

    variable_name: _ => token(PARAMETER_NAME),

    _identifier: _ => token(/[A-Za-z_][A-Za-z0-9_]*/),

    comment: _ => token(prec(1, seq('#', /.*/))),

    escape_sequence: _ => token(seq('\\', /./)),

    list_operator: _ => choice('&&', '||', '&'),

    _statement_body: $ => repeat1($._statement),

    _terminator: _ => choice(';', /\n+/),
  },
});
